@@ -9,7 +9,8 @@ from ..elements import Sphere
 class BasePropagator(object):
     __metaclass__ = abc.ABCMeta
 
-    def __init__(self, phantom, grid_size, pixel_size, wavelength):
+    def __init__(self, phantom, grid_size, pixel_size, wavelength,
+                 displacement=(0, 0)):
         """Base propagator
 
         Notes
@@ -25,20 +26,23 @@ class BasePropagator(object):
         gx, gy = grid_size
         #: center of the volume used
         self.center = np.array([gx, gy, 0]) / 2 - .5
+        self.center[0] += displacement[0]
+        self.center[1] += displacement[1]
 
     def propagate(self):
         field = np.ones(self.grid_size, dtype=np.complex256)
         for element in self.phantom:
             if isinstance(element, Sphere):
                 field *= self.propagate_sphere(element).field
-        qpifull = qpimage.QPImage(data=field,
-                                  which_data="field",
-                                  meta_data={
-                                      "wavelength": self.wavelength,
-                                      "pixel size": self.pixel_size,
-                                      "medium index": self.phantom.medium_index,
-                                      }
-                                  )
+        qpifull = qpimage.QPImage(
+                    data=field,
+                    which_data="field",
+                    meta_data={
+                        "wavelength": self.wavelength,
+                        "pixel size": self.pixel_size,
+                        "medium index": self.phantom.medium_index,
+                        }
+                    )
         return qpifull
 
     @abc.abstractmethod
